  the gpsd socket closes. TPV now refrains from reporting fields the
  fix quality won't support. gpsmon option for listing device types is
  now -L to -l can be used to enable logging (to stay consistent with
  the l command). There is new FAQ material on improving fix and time
  reference accuracy. New sections have been added to NMEA.txt on
  error status indications and satellite IDs.

* Wed Mar 3 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.92
  Fix a packaging error.  The new Python library module was
  inadvertently omitted from the 2.91 tarball.  Also, improve the json
  import test slightly.

* Mon Mar 1 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.91
  We have support for NMEA GLONASS sentences, and a regression test.
  Clients now get a DEVICE notification on every driver switch.  It is
  possible to specify a TCP/IP AIS feed such as AISHub as a data
  source. Serious bitrot in the NTRIP support has been fixed - it was
  probably nonfunctional for several releases before this.  Fixed
  buggy display of satellite-used flags in cgps.  xgps is replaced by
  a rewrite in Python that uses pygtk, eliminating a dependency on
  Motif; also, it now displays AIS information. Uniform treatment of
  display-unit defaulting and -u in xgps, cgps, and lcdgps. Support
  for AIS message types 25 and 26.  Support for IPv6.  A numeric
  instability in the earth_distance() function affecting track error
  modeling has been fixed. Old protocol has been removed from the
  daemon; the library still speaks it.

* Fri Dec 4 2009 Eric S. Raymond <esr@snark.thyrsus.com> - 2.90
  GPSD-NG, the new JSON-based command protocol, is now deployed; as a
  consequence, AIS is now fully supported in both daemon and client.
  Detection of end of a fix-reporting cycle is now reliable;
  accordingly data is accumulated from cycle start and the "J"
  (nojitter) option on both server and client side is gone. We have
  abandoned the gpsflash subproject since it has become apparent that