@@ -12,7 +12,9 @@
   now -L to -l can be used to enable logging (to stay consistent with
   the l command). There is new FAQ material on improving fix and time
   reference accuracy. New sections have been added to NMEA.txt on
-  error status indications and satellite IDs.
+  error status indications and satellite IDs.  New POLL command
+  brings back polling-mode operation.  A Client-HOWTO has been added
+  to the documentation.
 
 * Wed Mar 3 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.92
   Fix a packaging error.  The new Python library module was
